@@ -33,7 +33,7 @@ my %exit_status =
     env => 125,
     expr => 0,
     nice => 125,
-    nohup => 127,
+    nohup => 125,
     sort => 2,
     stdbuf => 125,
     su => 125,
