@@ -29,7 +29,8 @@ GNU coreutils NEWS                                    -*- outline -*-
   chroot, env, nice, and su fail with status 125, rather than 1, on
   internal error such as failure to parse command line arguments; this
   is for consistency with stdbuf and timeout, and avoids ambiguity
-  with the invoked command failing with status 1.
+  with the invoked command failing with status 1.  Likewise, nohup
+  fails with status 125 instead of 127.
 
 ** New features
 
